# cs2-masked-inspect-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
cs2_inspect/: __init__.py  exceptions.py  gen_codes.py  inspect_link.py  models.py  proto.py
tests/: test_gen_codes.py  test_inspect_link.py
